[project]
name = "ipyutils"
dynamic = ["version"]
description = "RPC for Python classes"
readme = "README.md"
requires-python = ">=3.8"
license = "LGPL-2.1-or-later"
authors = [
  { name = "Justin Peh Yu Xiang", email = "pehyuxiang@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Networking",
]

[tool.hatch.version]
source = "versioningit"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
